# transcoder-cluster

./: .gitignore  AI_PROMPT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/release-notes/: v0.2.1.md
.github/workflows/: python-tests.yml  release.yml
cli/: __init__.py  controller.py  worker.py
gui/: __init__.py  controller_app.py  worker_app.py  worker_app_test.py
scripts/: build.py  build.spec
tests/: test_config.py  test_controller_scheduler.py  test_presets.py  test_worker_capabilities.py
transcoder_cluster/: __init__.py
transcoder_cluster/core/: COMMUNICATION_FLOW.md  __init__.py  controller.py  discovery.py  worker.py
transcoder_cluster/transcode/: __init__.py  ffmpeg_wrapper.py  presets.py
transcoder_cluster/utils/: __init__.py  config.py  logger.py
